--- a/inventarios/inventarios/staticfiles/templates/html/app/add-certificacion.html
+++ b/inventarios/inventarios/staticfiles/templates/html/app/add-certificacion.html
@@ -23,31 +23,12 @@
                             <div class="help-block with-errors"></div>
                         </div>
                     </div>
-                    <div class="col-md-6">                      
-                        <div class="form-group">
-                            <label>Periodo de Carencia *</label>
-                            <input type="date" class="form-control" placeholder="Ingrese Fecha de Carencia" required>
-                            <div class="help-block with-errors"></div>
-                        </div>
-                    </div>
                     <div class="col-md-6">
                         <div class="form-group">
                             <label>Fecha de Ingreso</label>
                             <input type="date" class="form-control" placeholder="Ingrese Fecha de Ingreso" required>
                         </div>
-                    </div>
-                    <div class="col-md-6">
-                        <div class="form-group">
-                            <label>Ingrediente Activo</label>
-                            <select name="type" class="form-control" data-style="py-0" id="ingrediente" name="ingrediente">
-                                
-                                {% for ingrediente in ingredientes %}
-                                <option value="{{ ingrediente.id }}" >{{ ingrediente.nombre }}</option>
-                                {% endfor%}
-                                <!--Acá va un script con base de datos de unidades de medida, standard-->
-                            </select>
-                        </div>
-                    </div>              
+                    </div>         
                 </div>                            
                 <button type="submit" class="btn btn-primary mr-2">
                     {% if cert_id %}
@@ -109,7 +90,7 @@
         {%endif%}
 
         // Función para llenar el dropdown de ingredientes activos
-        function fillIngredientesDropdown(selectedId) {
+        /*function fillIngredientesDropdown(selectedId) {
             fetch('/insumos/ingredientes-activos/list-create/', {
                 headers: { 'Authorization': `Bearer ${accessToken}` }
             })
@@ -129,7 +110,7 @@
                         select.value = selectedId;  // Si hay un ID seleccionado, establecer en el dropdown
                     }
                 });
-        }
+        }*/
 
         // Si hay un cert_id, estamos en modo de edición
         if (cert_id) {
@@ -148,7 +129,6 @@
                 .then(data => {
                     // Rellenar el formulario con los datos de la certificación
                     document.querySelector('input[placeholder="Ingrese Registro ICA"]').value = data.registro_ica;
-                    document.querySelector('input[placeholder="Ingrese Fecha de Carencia"]').value = data.periodo_carencia.split('T')[0];
                     document.querySelector('input[placeholder="Ingrese Fecha de Ingreso"]').value = data.fecha_registro.split('T')[0];
 
                     // Llenar el dropdown de ingredientes y seleccionar el ingrediente activo de la certificación
@@ -159,7 +139,7 @@
                 });
         } else {
             // Estamos en modo de creación, solo llenamos el dropdown de ingredientes
-            fillIngredientesDropdown();
+            //fillIngredientesDropdown();
         }
 
         // Evento de envío del formulario
@@ -168,18 +148,18 @@
             e.preventDefault();  // Prevenir el envío tradicional del formulario.
 
             const registroICA = form.querySelector('input[placeholder="Ingrese Registro ICA"]').value;
-            const periodoCarencia = form.querySelector('input[placeholder="Ingrese Fecha de Carencia"]').value;
+            //const periodoCarencia = form.querySelector('input[placeholder="Ingrese Fecha de Carencia"]').value;
             const fechaIngreso = form.querySelector('input[placeholder="Ingrese Fecha de Ingreso"]').value;
-            var ingredientes_select = document.getElementById('ingrediente');
-            var ingrediente= ingredientes_select.options[ingredientes_select.selectedIndex].value;
-            const ingredienteActivo = ingrediente;
+            //var ingredientes_select = document.getElementById('ingrediente');
+            //var ingrediente= ingredientes_select.options[ingredientes_select.selectedIndex].value;
+            //const ingredienteActivo = ingrediente;
 
             const dataToSend = {
                 registro_ica: registroICA,
-                periodo_carencia: periodoCarencia + "T00:00:00Z",
+                //periodo_carencia: periodoCarencia + "T00:00:00Z",
                 periodo_reingreso: fechaIngreso + "T00:00:00Z",
                 fecha_registro: fechaIngreso.split('T')[0],  // Asumiendo que el formato es YYYY-MM-DD, solo toma la fecha.
-                ingrediente_activo: parseInt(ingredienteActivo, 10)  // Convertir a número.
+                //ingrediente_activo: parseInt(ingredienteActivo, 10)  // Convertir a número.
             };
 
             // Si estamos en modo de edición, agregar el ID al objeto
