--- a/inventarios/inventarios/staticfiles/templates/html/app/auth-sign-in.html
+++ b/inventarios/inventarios/staticfiles/templates/html/app/auth-sign-in.html
@@ -59,7 +59,9 @@
                               </div>
                            </div>
                            <div class="col-lg-5 content-right">
-                              <img src="{% static '/assets/images/login/CRECETO-login.jpg' %}" class="img-fluid image-right" alt="">
+                              <div class="row" style="display: block;  margin-left: auto;  margin-right: auto;  width: 40%;">   <img src="{% static '/assets/images/logo_ottsa.svg' %}" class="img-fluid image-right" alt=""></div>
+                              <div class="row">  <h2>Inventarios Ottsa</h2></div>
+            
                            </div>
                         </div>
                      </div>
