--- a/inventarios/inventarios/staticfiles/templates/html/app/list-certificacion.html
+++ b/inventarios/inventarios/staticfiles/templates/html/app/list-certificacion.html
@@ -33,9 +33,7 @@
             <thead class="bg-white text-uppercase">
                 <tr class="ligth ligth-data">
                     <th>Registro ICA</th>
-                    <th>Fecha de Carencia</th>
                     <th>Fecha de Ingreso</th>
-                    <th>Ingrediente Activo</th>
                     <th>Acciones</th>
                 </tr>
             </thead>
@@ -57,9 +55,7 @@
                     </div>
                     <div class="modal-body">
                         <b>Registro ICA: </b>{{certificacion.registro_ica}} <br>
-                        <b>Fecha de Carencia: </b>{{certificacion.periodo_carencia}}  <br>
                         <b>Fecha de Ingreso: </b>{{certificacion.periodo_reingreso}}  <br>
-                        <b>Ingrediente Activo: </b>{{certificacion.ingrediente_activo.nombre}}  <br>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
@@ -72,24 +68,7 @@
     </div>
 </div>
 
-<div id="avisomodal" class="modal fade" tabindex="-1" aria-labelledby="exampleModalCenteredScrollableTitle"
-    style="display: none;" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-scrollable modal-dialog-centered" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalCenteredScrollableTitle">Aviso</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">×</span>
-                </button>
-            </div>
-            <div class="modal-body-aviso" style="text-align: center;">
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
-            </div>
-        </div>
-    </div>
-</div>
+{% comment %} s {% endcomment %}
 
 
 
@@ -112,17 +91,11 @@
             const tbody = document.querySelector(".ligth-body");
 
             data.forEach(certificacion => {
-                fetch(`/insumos/editar/ingrediente/${certificacion.ingrediente_activo}/`, {
-                    headers: {
-                        'Authorization': `Bearer ${accessToken}`
-                    }
-                })
-                .then(response => response.json())
-                .then(ingrediente => {
+                
                     const row = document.createElement('tr');
                     var esAdministrador = {% if 'administracion' in grupos_usuario %}true{% else %}false{% endif %};
                     if (esAdministrador) {
-                        var btn_eliminar = `<a class="badge bg-warning mr-2 edit-button" data-toggle="tooltip" data-placement="top" title="Editar" href="#" data-id="${ingrediente.id}"><i class="ri-delete-bin-line mr-0"></i></a>`
+                        var btn_eliminar = `<a class="badge bg-warning mr-2 delete-button" data-toggle="tooltip" data-placement="top" title="Editar" href="#" data-id="${certificacion.id}"><i class="ri-delete-bin-line mr-0"></i></a>`
                     }
                     else{
                         var btn_eliminar = ''
@@ -130,7 +103,7 @@
 
                     var esEditar = {% if 'edicion' in grupos_usuario %}true{% else %}false{% endif %};
                     if (esEditar) {
-                        var btn_editar = `<a class="badge bg-warning mr-2 delete-button" data-toggle="tooltip" data-placement="top" title="" data-original-title="Delete" href="#" data-id="${certificacion.id}"><i class="ri-delete-bin-line mr-0"></i></a>`
+                        var btn_editar = `<a class="badge bg-success mr-2 edit-button" data-toggle="tooltip" data-placement="top" title="" data-original-title="Delete" href="#" data-id="${certificacion.id}"><i class="ri-pencil-line mr-0"></i></a>`
                     }
                     else{
                         var btn_editar = ''
@@ -138,9 +111,8 @@
 
                     row.innerHTML = `
                     <td>${certificacion.registro_ica}</td>
-                    <td>${certificacion.periodo_carencia}</td>
                     <td>${certificacion.periodo_reingreso}</td>
-                    <td>${ingrediente.nombre}</td>
+
                     <td>
                         <div class="d-flex align-items-center list-action">
                             <a class="badge badge-info mr-2" data-toggle="modal" data-target="#exampleModalCenteredScrollable${ certificacion.id }" href="#"><i class="ri-eye-line mr-0"></i></a>
@@ -150,7 +122,7 @@
                         </div>
                     </td>`;
                     tbody.appendChild(row);
-                });
+                
             });
 
             $('[data-toggle="popover"]').popover();
@@ -201,7 +173,9 @@
 
         // Función para eliminar certificación
         function deleteCertificacion(certId, row) {
-            fetch(`/insumos/certificaciones/retrieve/${certId}/`, {
+
+            showAlertInModal('¿Estás seguro de que deseas eliminar este usuario?', () => {
+                fetch(`/insumos/certificaciones/retrieve/${certId}/`, {
                 method: 'DELETE',
                 headers: {
                     'Authorization': `Bearer ${accessToken}`
@@ -217,7 +191,7 @@
             })
             .catch(error => {
                 console.error('Error:', error);
-            });
+            });});
         }
 
         // Funciones de popover
