--- a/inventarios/inventarios/staticfiles/templates/html/app/list-ingrediente.html
+++ b/inventarios/inventarios/staticfiles/templates/html/app/list-ingrediente.html
@@ -52,25 +52,7 @@
 {% endfor %}
 
 
-<!--Modal de Avisos-->
-<div id="avisomodal" class="modal fade" tabindex="-1" aria-labelledby="exampleModalCenteredScrollableTitle"
-    style="display: none;" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-scrollable modal-dialog-centered" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalCenteredScrollableTitle">Aviso</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">×</span>
-                </button>
-            </div>
-            <div class="modal-body-aviso" style="text-align: center;">
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
-            </div>
-        </div>
-    </div>
-</div>
+
 <script>
     document.addEventListener("DOMContentLoaded", function () {
         {% if user.is_authenticated %}
@@ -179,7 +161,9 @@
 
         // Función para eliminar Ingrediente Activo
         function deleteIngrediente(ingredientId, row) {
-            fetch(`/insumos/ingredientes-activos/retrieve/${ingredientId}/`, {
+
+            showAlertInModal('¿Estás seguro de que deseas eliminar este ingrediente?', () => {
+                fetch(`/insumos/ingredientes-activos/retrieve/${ingredientId}/`, {
                 method: 'DELETE',
                 headers: {
                     'Authorization': `Bearer ${accessToken}`
@@ -195,7 +179,7 @@
                 })
                 .catch(error => {
                     console.error('Error:', error);
-                });
+                });});
         }
 
         // Funciones de popover con jQuery
